BuildHughes/translation-tool/inputs/source_meta/objects/SearchQuerySetting_API__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This will be used in fetchCase method of CaseAManagmentAPIRestWrapper Class.</description>
    <fields>
        <fullName>Api_Name_in_SFDC__c</fullName>
        <description>This field will store the API name of the parameter passed in URL by Source System.</description>
        <inlineHelpText>This field will store the API name of the parameter passed in URL by Source System.</inlineHelpText>
        <label>Api Name in SFDC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_type_in_SFDC__c</fullName>
        <description>mention the data type of Parameter</description>
        <inlineHelpText>mention the data type of Parameter</inlineHelpText>
        <label>Data type in SFDC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>Object name</description>
        <inlineHelpText>Object name</inlineHelpText>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParameterName__c</fullName>
        <description>This field will have the name of the parameter which will be passed in URL by Source System.</description>
        <inlineHelpText>This field will have the name of the parameter which will be passed in URL by Source System.</inlineHelpText>
        <label>Parameter Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <description>This field will have the Source System Name.</description>
        <inlineHelpText>This field will have the Source System Name.</inlineHelpText>
        <label>Source System</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>SearchQuerySetting_API</label>
</CustomObject>